--- a/src/Presentation/SmartStore.Web/Views/Search/SearchBox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/SearchBox.cshtml
@@ -29,5 +29,5 @@
 		<div class="instasearch-drop-body clearfix"></div>
 	</div>
 
-    @Html.Widget("searchbox")
+    Html.RenderWidget("searchbox");
 }
