--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/Edit.cshtml
@@ -10,16 +10,18 @@
 			<a href='@Url.Action("List")'>(@T("Admin.Catalog.Categories.BackToList"))</a>
         </div>
         <div class="options">
-			@Html.Widget("admin_button_toolbar_before")
+			@{ Html.RenderWidget("admin_button_toolbar_before"); }
 
 			<button type="submit" name="preview" value="preview" onclick="javascript:OpenPopup('@Url.RouteUrl("Category", new { SeName = Model.SeName })', true); return false;" class="btn">
 				<i class="fa fa-eye"></i>&nbsp;@T("Admin.Common.Preview")
 			</button>
             <button type="submit" name="save" value="save" class="btn btn-primary"><i class="fa fa-check"></i>&nbsp;@T("Admin.Common.Save")</button>
             <button type="submit" name="save" value="save-continue" class="btn">@T("Admin.Common.SaveContinue")</button>
-            <button type="submit" id="category-delete" value="category-delete" class="btn btn-danger" data-toggle="modal" data-target="#DeleteCategoryModal"><i class="fa fa-trash-o"></i>&nbsp;@T("Admin.Common.Delete")</button>
+            <button type="submit" id="category-delete" value="category-delete" class="btn btn-danger" data-toggle="modal" data-target="#DeleteCategoryModal">
+                <i class="fa fa-trash-o"></i>&nbsp;@T("Admin.Common.Delete")
+            </button>
 
-			@Html.Widget("admin_button_toolbar_after")
+			@{ Html.RenderWidget("admin_button_toolbar_after"); }
         </div>
     </div>
 
