--- a/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/Edit.cshtml
@@ -10,7 +10,7 @@
 			<a href='@Url.Action("List")'>(@T("Admin.Catalog.Manufacturers.BackToList"))</a>
         </div>
         <div class="options">
-			@Html.Widget("admin_button_toolbar_before")
+			@{ Html.RenderWidget("admin_button_toolbar_before"); }
 
             <button type="button" onclick="OpenWindow('@Url.RouteUrl("Manufacturer", new { SeName = Model.SeName })', true); return false;" class="btn">
 				<i class="fa fa-eye"></i>
@@ -28,7 +28,7 @@
                 @T("Admin.Common.Delete")
             </button>
 
-			@Html.Widget("admin_button_toolbar_after")
+			@{ Html.RenderWidget("admin_button_toolbar_after"); }
         </div>
     </div>
 
