--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
@@ -13,7 +13,7 @@
 			<a href='@Url.Action("List")'>(@T("Admin.Orders.BackToList"))</a>
         </div>
         <div class="options">
-			@Html.Widget("admin_button_toolbar_before")
+			@{ Html.RenderWidget("admin_button_toolbar_before"); }
 
             <a href="@Url.Action("Print", new { orderId = Model.Id, pdf = false })" target="print" class="btn print-order-button" rel="nofollow">
                 <i class="fa fa-print"></i>
@@ -32,7 +32,7 @@
 			</button>
             <input type="submit" id="btnRefreshPage" name="btnRefreshPage" style="display: none" />
 
-			@Html.Widget("admin_button_toolbar_after")
+			@{ Html.RenderWidget("admin_button_toolbar_after"); }
         </div>
     </div>
 
