--- a/src/Presentation/SmartStore.Web/Views/Blog/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Blog/List.cshtml
@@ -4,7 +4,7 @@
 @using SmartStore.Web.Framework.UI;
 @{
     Layout = "_ColumnsTwo";
-    
+
     Html.AddTitleParts(T("PageTitle.Blog").Text);
 }
 
@@ -40,7 +40,9 @@
         </h1>
     </div>
     <div class="page-body">
-        @Html.Widget("bloglist_page_before_posts")
+        
+        @{ Html.RenderWidget("bloglist_page_before_posts"); }
+
         <div class="blogposts container">
             @foreach (var item in Model.BlogPosts)
             {
@@ -87,7 +89,7 @@
                             @Html.Raw(item.Body)
                         </div>
 
-                        @Html.Widget("bloglist_page_inside_post")
+                        @{ Html.RenderWidget("bloglist_page_inside_post"); }
                     </div>
 
                 </article>
@@ -102,6 +104,6 @@
                           .Style(PagerStyle.Pagination)
                           .MaxPagesToDisplay(6))
 
-        @Html.Widget("bloglist_page_after_posts")
+        @{ Html.RenderWidget("bloglist_page_after_posts"); }
     </div>
 </div>
