--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/MegaMenu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/MegaMenu.cshtml
@@ -43,7 +43,7 @@
 
 @if (!GetThemeVariable<bool>("DisplayNavbar", true))
 {
-	return;
+    return;
 }
 
 <div class="megamenu simple">
@@ -54,23 +54,23 @@
 
 	<ul class="nav navbar-nav">
 
-		@Html.Widget("megamenu_before_first_item")
+		@{ Html.RenderWidget("megamenu_before_first_item"); }
 
 		@foreach (var node in Model.Root.Children)
-		{
-			var item = node.Value;
+        {
+            var item = node.Value;
 
-			if (!item.Visible)
-			{
-				continue;
-			}
+            if (!item.Visible)
+            {
+                continue;
+            }
 
-			var itemUrl = GetNodeLink(node);
-			var itemState = node.GetNodePathState(Model.Path);
+            var itemUrl = GetNodeLink(node);
+            var itemState = node.GetNodePathState(Model.Path);
 
 			<li class='@(GetCssClassForNode(node, itemState))'>
 				@if (node.HasChildren)
-				{
+                {
 					<a href="@itemUrl" class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false" data-target="#dropdown-menu-@node.Value.EntityId">
 						@item.Text
 					</a>
@@ -80,12 +80,12 @@
 					<a href="@itemUrl" class="nav-link">
 						@item.Text
 					</a>
-				}
+                }
 
 			</li>
-		}
+        }
 
-		@Html.Widget("megamenu_after_last_item")
+		@{ Html.RenderWidget("megamenu_after_last_item"); }
 
 	</ul>
 
