--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/_Notifications.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/_Notifications.cshtml
@@ -27,23 +27,23 @@
 
 	<div id="notification-list" style="display:none; position:absolute; left:-9999px">
 		@foreach (var message in this.GetMessages(NotifyType.Error))
-		{
+        {
 			<div class="msg" data-type="error">@Html.Raw(message)</div>
-		}
+        }
 		@foreach (var message in this.GetMessages(NotifyType.Success))
-		{
+        {
 			<div class="msg" data-type="success">@Html.Raw(message)</div>
-		}
+        }
 		@foreach (var message in this.GetMessages(NotifyType.Info))
-		{
+        {
 			<div class="msg" data-type="info">@Html.Raw(message)</div>
-		}
+        }
 		@foreach (var message in this.GetMessages(NotifyType.Warning))
-		{
+        {
 			<div class="msg" data-type="warning">@Html.Raw(message)</div>
-		}
+        }
 	</div>
 
-	@Html.Widget("notifications")
+	Html.RenderWidget("notifications");
 }
 
