--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/FlyoutShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/FlyoutShoppingCart.cshtml
@@ -134,7 +134,8 @@
             }
         </div>
     }
-	@Html.Widget("mini_shopping_cart_bottom")
+
+	@{ Html.RenderWidget("mini_shopping_cart_bottom"); }
 </div>
 
 <script>
