--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
@@ -291,7 +291,9 @@
 }
 
 <div class="order-summary-content">
-	@Html.Widget("order_summary_content_before")
+	
+    @{ Html.RenderWidget("order_summary_content_before"); }
+
 	@{ Html.RenderPartial("_OrderReviewData", Model.OrderReviewData); }
    
     @if (Model.DisplayCommentBox && !Model.IsEditable)
@@ -425,7 +427,8 @@
 		<div class="cart-footer row m-t-3">
 
 			<div class="col-sm-8 order-totals-left">
-				@Html.Widget("order_summary_content_totals_left")
+
+				@{ Html.RenderWidget("order_summary_content_totals_left"); }
 
 				@if (Model.IsEditable)
                 {
@@ -436,7 +439,7 @@
                                 Html.RenderPartial("_DiscountBox", Model.DiscountBox);
                                 Html.RenderPartial("_GiftCardBox", Model.GiftCardBox);
                             }
-                            @Html.Widget("order_summary_content_deals")
+                            @{ Html.RenderWidget("order_summary_content_deals"); }
                         </div>
 
                         <!-- Checkout attributes -->
@@ -461,7 +464,7 @@
 
 				@{ Html.RenderAction("OrderTotals", "ShoppingCart", new { isEditable = Model.IsEditable }); }
 
-				@Html.Widget("order_summary_content_totals_bottom")
+				@{ Html.RenderWidget("order_summary_content_totals_bottom"); }
 
 				@if (Model.IsEditable)
 				{
@@ -493,7 +496,7 @@
 		</div>
 		}
         
-		@Html.Widget("order_summary_content_after")
+		Html.RenderWidget("order_summary_content_after");
 
 		if (Model.IsEditable)
 		{
